# arpeggio

./: .gitignore  AGENTS.md  README.md  download_data.sh  main.py  pyproject.toml
notebooks/: 00_users_eda.ipynb  01_cards_eda.ipynb  02_transaction_eda.ipynb
src/: dataset.py  losses.py  model.py  preprocessing.py  train.py
tests/: test_model.py  test_preprocessing.py
